test/compile-fail/resolution/type-existence/fn-unknown-struct/expected.txt
error: expected type, found mod `X`
  ┌─ ./test/compile-fail/resolution/type-existence/fn-unknown-struct/top.rhdl:3:9
  │
3 │ fn a(x: X) {
  │         ^ not a type

error[E0425]: unresolved item `Y`
  ┌─ ./test/compile-fail/resolution/type-existence/fn-unknown-struct/top.rhdl:4:12
  │
4 │     let y: Y = Y {};
  │            ^ no `Y` item

